# zarrwhals

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  cliff.toml  mise.toml  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yaml  changelog.yaml  release-drafter.yaml  release.yaml  test.yaml
docs/: api.md  architecture.md  changelog.md  conf.py  contributing.md  index.md  references.md
docs/notebooks/: example.ipynb
src/zarrwhals/: __init__.py  _stores.py  encoders.py  io.py  specs.py  writers.py  zarrframe.py
src/zarrwhals/zdtypes/: __init__.py  array.py  base.py  binary.py  boolean.py  categorical.py  converters.py  date.py  datetime.py  decimal.py  duration.py  enum.py  float32.py  float64.py  int16.py  int32.py  int64.py  int8.py  list.py  object.py  string.py  struct.py  time.py  uint16.py  uint32.py  uint64.py  uint8.py  unknown.py
tests/: conftest.py  test_basic.py  test_categorical_codes.py  test_dask_backend.py  test_error_recovery.py  test_io_roundtrip.py  test_localstore_backend.py  test_polars_backend.py  test_sharding.py  test_specs.py  test_version.py  test_zarrframe.py  test_zdtypes.py
