[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.9.6,<0.10" ]

[project]
name = "zarrwhals"
version = "0.0.1"
description = "Dataframe-agnostic Zarr storage powered by Narwhals"
readme = "README.md"
license = { file = "LICENSE" }
maintainers = [
  { name = "Sricharan Reddy Varra", email = "sricharan.varra@czbiohub.org" },
]
authors = [ { name = "Sricharan Reddy Varra" } ]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "mkdocs-shadcn",
  "narwhals>=2.10.2",
  "obstore>=0.8.2",
  "pydantic-zarr>=0.8.4",
  # for debug logging (referenced from the issue template)
  "session-info2",
  "zarr>=3.1.3",
  "zarrs>=0.2.1",
]
# https://docs.pypi.org/project_metadata/#project-urls
urls.Documentation = "https://zarrwhals.readthedocs.io/en/latest/"
urls.Homepage = "https://github.com/srivarra/zarrwhals"
urls.Source = "https://github.com/srivarra/zarrwhals"

[dependency-groups]
dev = [
  "scalene>=1.5.55",
  { include-group = "bench" },
  { include-group = "doc" },
  { include-group = "test" },
]
test = [
  "coverage>=7.10",
  "pytest>=9",
  "pytest-cov",
  "pytest-xdist>=3.8",
  { include-group = "dask" },
  { include-group = "pandas" },
  { include-group = "polars" },
  { include-group = "pyarrow" },
]
doc = [
  "mkdocs>=1.6",
  "mkdocs-shadcn>=0.3",
  "mkdocstrings[python]>=0.29",
  "pymdown-extensions>=10.17.2",
  "ruff>=0.14.6",
]
pandas = [ "pandas" ]
dask = [ "dask[dataframe]" ]
polars = [ "polars" ]
pyarrow = [ "pyarrow" ]
bench = [ "pytest-codspeed>=4.2", { include-group = "test" } ]

[tool.ruff]
line-length = 120
src = [ "src" ]
extend-include = [ "*.ipynb" ]

format.indent-style = "space"
format.quote-style = "double"
format.docstring-code-line-length = "dynamic"

format.docstring-code-format = true
lint.select = [
  "B",    # flake8-bugbear
  "BLE",  # flake8-blind-except
  "C4",   # flake8-comprehensions
  "D",    # pydocstyle
  "E",    # Error detected by Pycodestyle
  "F",    # Errors detected by Pyflakes
  "I",    # isort
  "NPY",  # NumPy-specific rules
  "PD",   # Pandas code
  "PERF", # Perflint
  "PT",   # Pytest
  "PTH",  # pathlib
  "RUF",  # Ruff-specific rules
  "TID",  # flake8-tidy-imports
  "TRY",  # Tryceratops
  "UP",   # pyupgrade
  "W",    # Warning detected by Pycodestyle
]
lint.ignore = [
  "B008", # Errors from function calls in argument defaults. These are fine when the result is immutable.
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
  "D105", # __magic__ methods are often self-explanatory, allow missing docstrings
  "D107", # Missing docstring in __init__
  # Disable one in each pair of mutually incompatible rules
  "D203",   # We don't want a blank line before a class docstring
  "D213",   # <> We want docstrings to start immediately after the opening triple quote
  "D400",   # first line should end with a period [Bug: doesn't work with single-line docstrings]
  "D401",   # First line should be in imperative mood; try rephrasing
  "E501",   # line too long -> we accept long comment lines; formatter gets rid of long code lines
  "E731",   # Do not assign a lambda expression, use a def -> lambda expression assignments are convenient
  "E741",   # allow I, O, l as variable names -> I is the identity matrix
  "PD011",  # Use .to_numpy() instead of .values (in tests, .values is fine)
  "RUF001", # ambiguous-unicode-character-string
  "RUF002", # ambiguous-unicode-character-docstring
  "RUF003", # ambiguous-unicode-character-comment
]
lint.per-file-ignores."*/__init__.py" = [ "F401" ]
lint.per-file-ignores."docs/*" = [ "I" ]
lint.per-file-ignores."tests/*" = [ "D" ]
lint.pydocstyle.convention = "numpy"

[tool.pytest]
minversion = "9.0"
strict = true                           # Enables strict_markers, strict_config, xfail_strict
testpaths = [ "tests" ]
addopts = [ "--import-mode=importlib" ]

[tool.coverage.run]
source = [ "zarrwhals" ]
concurrency = [ "multiprocessing" ]
parallel = true
patch = [ "subprocess" ]
omit = [ "**/test_*.py" ]

[tool.uv-ship]
release-branch = "main"
tag-prefix = "v"
allow-dirty = false
# Changelog managed by git-cliff, not uv-ship
skip-changelog = true

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version_provider = "uv"
major_version_zero = true
